--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 The Most Delicious Meme Coin on Stellar">
   
   
-  <title>MayoCoin: Spread It!</title>
+  <title>MayoCoin: Spread It!!</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
