--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 The Most Delicious Meme Coin on Stellar">
   
   
-  <title>MayoCoin: Spread It!!</title>
+  <title>MayoCoin: Spread It!</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -100,7 +100,7 @@ The Most Delicious Meme Coin on Stellar">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>MayoCoin:&nbsp;</strong><strong>Spread It!
 </strong><div><strong>The Most Delicious Meme Coin on Stellar</strong></div></h1>
                 
-                <p class="mbr-text mbr-fonts-style display-7"><br>MayoCoin is the most delicious meme coin on Stellar. We are a vibrant community centred around our tipping coin, MayoCoin. Engage with us us on socials and get ready to <em>spread it!</em>&nbsp;Our activities include:<br></p>
+                <p class="mbr-text mbr-fonts-style display-7"><br>MayoCoin is the most delicious memecoin on Stellar. We are a vibrant community centred around our tipping coin, MayoCoin. Engage with us us on socials and get ready to <em>spread it!</em>&nbsp;Our activities include:<br></p>
                 
             </div>
         </div>
